Bug 1223479 - Fix displayport size calculation on fennec. r=kats a=ritu

The displayport was accidentally being calculated as too large. This was
leading to a large number of tiles existing at once, causing very high
memory usage.

--HG--
extra : commitid : 6w237n5LiXY
extra : source : 1b812b3dc8aaa86c7e94476845cc3bc1a10609e0